<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:id="@+id/drawer_layout">

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Top Bar -->
            <RelativeLayout
                android:id="@+id/topBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <!-- Menu Button -->
                <ImageButton
                    android:id="@+id/menuButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/menu_icon"
                    android:contentDescription="Menu" />

                <!-- E-Alert Logo -->
                <ImageView
                    android:id="@+id/ealertLogo"
                    android:layout_width="200dp"
                    android:layout_height="160dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ealert"
                    android:contentDescription="E-Alert Logo" />

                <!-- Notification Icon -->
                <ImageButton
                    android:id="@+id/notificationsBtn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/notification_icon"
                    android:contentDescription="Notifications" />
            </RelativeLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/topBar"
                android:fillViewport="true">

                <RelativeLayout
                    android:id="@+id/home_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:context=".HomeActivity">

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/slideshowViewPager"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginTop="20dp"
                        />

                    <TextView
                        android:id="@+id/tvAboutUs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:background="@drawable/line"
                        android:text="About Us"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:textStyle="italic"
                        android:fontFamily="@font/alexandria_extrabold"
                        android:layout_below="@id/slideshowViewPager" />

                    <TextView
                        android:id="@+id/tfAboutUs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textAlignment="center"
                        android:text="@string/about_us"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:textStyle="italic"
                        android:fontFamily="@font/alexandria_medium"
                        android:layout_below="@id/tvAboutUs" />

                    <TextView
                        android:id="@+id/tvEmerServ"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_marginTop="40dp"
                        android:background="@drawable/line"
                        android:text="EMERGENCY SERVICES"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:textStyle="italic"
                        android:fontFamily="@font/alexandria_extrabold"
                        android:layout_below="@id/tfAboutUs" />

                    <LinearLayout
                        android:id="@+id/llNDRRMC"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_below="@id/tvEmerServ">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ndrrmc"
                            android:layout_margin="15dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:layout_margin="20dp"
                            android:fontFamily="@font/alexandria_medium"
                            android:text="@string/ndrrmc"/>

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/llBFP"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_below="@id/llNDRRMC">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bfp"
                            android:layout_margin="15dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:layout_margin="20dp"
                            android:fontFamily="@font/alexandria_medium"
                            android:text="@string/bfp"/>

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/llPRC"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_below="@id/llBFP">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/prc"
                            android:layout_margin="15dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:layout_margin="20dp"
                            android:fontFamily="@font/alexandria_medium"
                            android:text="@string/prc"/>

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/llPNP"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_below="@id/llPRC">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/pnp"
                            android:layout_margin="15dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:layout_margin="20dp"
                            android:fontFamily="@font/alexandria_medium"
                            android:text="@string/pnp"/>

                    </LinearLayout>
                </RelativeLayout>
            </ScrollView>

            <!-- Emergency Button (Floating Action Button) -->
            <ImageButton
                android:id="@+id/emergencyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="50dp"
                android:background="@drawable/emergency_button" />

        </RelativeLayout>
    </FrameLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu" />

    <!-- Emergency Types Navigation Drawer -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/emergency_nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:itemIconSize="50dp"
        android:layout_gravity="end"
        android:background="@drawable/background"
        app:menu="@menu/emergency_drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>